--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -7,7 +7,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="54dp"
+        android:layout_height="40dp"
         android:background="@color/colorPrimary" >
 
         <TextView
@@ -184,7 +184,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingLeft="12dp"
-                    android:textColor="@color/colorAccent"
+                    android:textColor="#ff0000"
                     android:text="退出登陆"
                     android:textSize="16dp" />
             </LinearLayout>
