--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#9932cc</color>
+    <color name="colorPrimaryDark">#9932cc</color>
+    <color name="colorAccent">#ff8c00</color>
     <color name="colorText">#8A000000</color>
     <color name="colorGrayText">#64000000</color>
     <color name="white">#ffffff</color>
