--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,89 +16,14 @@
         <!--意思是，剩余的位置全都是RelativeLayout的-->
     </RelativeLayout>
 
-    <TextView
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#797878"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:orientation="horizontal">
-        <LinearLayout
-            android:id="@+id/item1"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        app:itemIconTint="@drawable/selector_bottom_navigation"
+        app:itemTextColor="@drawable/selector_bottom_navigation"
+        app:menu="@menu/menu_bottom_navigation" />
 
-            <ImageView
-                android:id="@+id/item1_iv"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_margin="3dp"
-                android:layout_weight="3"
-                android:padding="1dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/wxb"
-                android:visibility="visible" />
-            <TextView
-                android:id="@+id/item1_tv"
-                android:text="广场"
-                android:textSize="16sp"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:gravity="center"/>
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/item2"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-            <ImageView
-                android:id="@+id/item2_iv"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="3"
-                android:layout_margin="3dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/meizhuang"
-                android:padding="4dp"/>
-            <TextView
-                android:id="@+id/item2_tv"
-                android:text="动态"
-                android:textSize="16sp"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:gravity="center"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/item3"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/item3_iv"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_margin="3dp"
-                android:layout_weight="3"
-                android:padding="3dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/xiebaopeishi" />
-            <TextView
-                android:id="@+id/item3_tv"
-                android:text="我的"
-                android:textSize="16sp"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:gravity="center" />
-        </LinearLayout>
-    </LinearLayout>
 </LinearLayout>
+
